--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.0.0",
     "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
+    "factor-bundle": "^2.5.0",
+    "grunt": "^1.0.1",
+    "grunt-browserify": "^5.0.0",
+    "grunt-contrib-copy": "^1.0.0"
   }
 }
